CMAKE config files are added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,7 +154,7 @@ if (MIMETIC_INSTALL)
 
     # Only generate this target if no higher-level project already has
     if (NOT TARGET uninstall)
-        configure_file(CMake/cmake_uninstall.cmake.in
+        configure_file(CMAKE/cmake_uninstall.cmake.in
                        cmake_uninstall.cmake IMMEDIATE @ONLY)
         add_custom_target(uninstall
                           "${CMAKE_COMMAND}" -P
