--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,7 +24,7 @@ target_compile_options(b64 PRIVATE
 # 6 define directories of include files - top level directory for mimetic .h files
 #target_include_directories(runtest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
-target_link_libraries(b64   $<TARGET_FILE:mimetic>)
+target_link_libraries(b64   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(b64 PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(qp qp.cxx)
@@ -32,7 +32,7 @@ target_compile_options(qp PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(qp   $<TARGET_FILE:mimetic>)
+target_link_libraries(qp   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(qp PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(exbin exbin.cxx)
@@ -40,7 +40,7 @@ target_compile_options(exbin PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(exbin   $<TARGET_FILE:mimetic>)
+target_link_libraries(exbin   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(exbin PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(structure structure.cxx)
@@ -49,7 +49,7 @@ target_compile_options(structure PRIVATE
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
 
-target_link_libraries(structure   $<TARGET_FILE:mimetic>)
+target_link_libraries(structure   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(structure PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(catpart catpart.cxx)
@@ -57,7 +57,7 @@ target_compile_options(catpart PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(catpart   $<TARGET_FILE:mimetic>)
+target_link_libraries(catpart   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(catpart PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(buildidx buildidx.cxx)
@@ -65,7 +65,7 @@ target_compile_options(buildidx PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(buildidx   $<TARGET_FILE:mimetic>)
+target_link_libraries(buildidx   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(buildidx PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(search search.cxx)
@@ -73,7 +73,7 @@ target_compile_options(search PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(search   $<TARGET_FILE:mimetic>)
+target_link_libraries(search   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(search PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(mbox mbox.cxx)
@@ -81,7 +81,7 @@ target_compile_options(mbox PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(mbox   $<TARGET_FILE:mimetic>)
+target_link_libraries(mbox   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(mbox PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 add_executable(mm mm.cxx mm.h engine.h engine.cxx cmdline.cxx cmdline.h)
@@ -89,7 +89,7 @@ target_compile_options(mm PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(mm   $<TARGET_FILE:mimetic>)
+target_link_libraries(mm   $<TARGET_FILE:mimetic> mimetic)
 target_include_directories(mm PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 
 #find_library(MIMETIC_EXAMPLES_CRYPTO_LIB crypto)
@@ -107,7 +107,7 @@ target_compile_options(smimestruct PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(smimestruct   $<TARGET_FILE:mimetic> OpenSSL::Crypto OpenSSL::SSL)
+target_link_libraries(smimestruct   $<TARGET_FILE:mimetic> mimetic OpenSSL::Crypto OpenSSL::SSL)
 target_include_directories(smimestruct PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/)
 #smimestruct_LDADD-lcrypto -lssl ../mimetic/libmimetic.la
 
@@ -116,7 +116,7 @@ target_compile_options(smime2xml PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4 >
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic >
 )
-target_link_libraries(smime2xml   $<TARGET_FILE:mimetic>  OpenSSL::Crypto OpenSSL::SSL)
+target_link_libraries(smime2xml   $<TARGET_FILE:mimetic>  mimetic OpenSSL::Crypto OpenSSL::SSL)
 target_include_directories(smime2xml PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../ ${mimetic_BINARY_DIR}/include/ )
 #smime2xml_LDADD-lcrypto -lssl ../mimetic/libmimetic.la
 
